--- a/src/index.scss
+++ b/src/index.scss
@@ -116,3 +116,16 @@ ul {
   font-weight: bold;
   font-size: 20px;
 }
+.notification_list{
+  display: block;
+    text-transform: lowercase;
+  .username{
+    color: black;
+  }
+  .action_time{
+    color: gray;
+    text-decoration: underline;
+    font-size: 15px;
+    font-style: italic;
+  }
+}
