add product page

--- a/src/index.scss
+++ b/src/index.scss
@@ -129,3 +129,13 @@ ul {
     font-style: italic;
   }
 }
+
+
+.products{
+  background-color: lightcyan;
+  margin: 20px;
+}
+.pic{
+  width: 200px;
+  height: 200px;
+}
