--- a/src/components/layout/header.scss
+++ b/src/components/layout/header.scss
@@ -1,5 +1,5 @@
 .navigation_bar {
-  background-image: url(http://katofarm-f.jp/images/assets/bg-index-mainvisual@2x.png);
+  background-image: url(http://katofarm-f.jp/images/assets/bg-header-sky.png);
   background-size: 2000px auto;
   background-repeat: no-repeat;
   background-position: top;
@@ -183,90 +183,94 @@
     }
   }
 
-  //sun
-  .sun {
-    border-radius: 153px 156px 183px 171px;
-    background-color: rgb(231, 125, 88);
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    display: inline-block;
+  .ul_wrap {
     position: relative;
-    top: 85px;
-    left: 83%;
-    transition: top 0.1s ease;
+    width: 100%;
+    //sun
+    .sun {
+      border-radius: 153px 156px 183px 171px;
+      background-color: rgb(231, 125, 88);
+      height: 100px;
+      width: 100px;
+      border-radius: 50%;
+      display: inline-block;
+      position: relative;
+      top: 85px;
+      left: 83%;
+      transition: top 0.1s ease;
 
-    @keyframes spin {
-      from {
-        transform: rotate(0deg);
+      @keyframes spin {
+        from {
+          transform: rotate(0deg);
+        }
+
+        to {
+          transform: rotate(360deg);
+        }
       }
 
-      to {
-        transform: rotate(360deg);
-      }
-    }
-
-    .sunbeams {
-      width: 150px;
-      height: 150px;
-      position: absolute;
-      top: -25px;
-      left: -25px;
-      animation: spin 28s linear 0s infinite;
-
-      .beam {
-        width: 5px;
-        height: 34px;
-        background-color: rgb(231, 125, 88);
+      .sunbeams {
+        width: 150px;
+        height: 150px;
         position: absolute;
-      }
+        top: -25px;
+        left: -25px;
+        animation: spin 28s linear 0s infinite;
 
-      .beam1 {
-        transform: rotate(0deg);
-        top: -24px;
-        left: 83px;
-      }
+        .beam {
+          width: 5px;
+          height: 34px;
+          background-color: rgb(231, 125, 88);
+          position: absolute;
+        }
 
-      .beam2 {
-        transform: rotate(45deg);
-        top: 19px;
-        left: 152px;
-      }
+        .beam1 {
+          transform: rotate(0deg);
+          top: -24px;
+          left: 83px;
+        }
 
-      .beam3 {
-        transform: rotate(90deg);
-        top: 70px;
-        left: 159px;
-      }
+        .beam2 {
+          transform: rotate(45deg);
+          top: 19px;
+          left: 152px;
+        }
 
-      .beam4 {
-        transform: rotate(135deg);
-        top: 129px;
-        left: 150px;
-      }
+        .beam3 {
+          transform: rotate(90deg);
+          top: 70px;
+          left: 159px;
+        }
 
-      .beam5 {
-        transform: rotate(180deg);
-        top: 149px;
-        left: 80px;
-      }
+        .beam4 {
+          transform: rotate(135deg);
+          top: 129px;
+          left: 150px;
+        }
 
-      .beam6 {
-        transform: rotate(225deg);
-        top: 131px;
-        left: 2px;
-      }
+        .beam5 {
+          transform: rotate(180deg);
+          top: 149px;
+          left: 80px;
+        }
 
-      .beam7 {
-        transform: rotate(270deg);
-        top: 72px;
-        left: -17px;
-      }
+        .beam6 {
+          transform: rotate(225deg);
+          top: 131px;
+          left: 2px;
+        }
 
-      .beam8 {
-        transform: rotate(315deg);
-        top: -4px;
-        left: 3px;
+        .beam7 {
+          transform: rotate(270deg);
+          top: 72px;
+          left: -17px;
+        }
+
+        .beam8 {
+          transform: rotate(315deg);
+          top: -4px;
+          left: 3px;
+        }
       }
     }
   }
