add css in index

--- a/src/components/layout/header.scss
+++ b/src/components/layout/header.scss
@@ -1,5 +1,5 @@
 * {
-  outline: 1px solid red;
+  // outline: 1px solid red;
 }
 
 .navigation_bar {
@@ -24,12 +24,7 @@
   background-repeat: no-repeat;
   background-position: top;
   position: relative;
-  height: 820px;
-  background-size: 2000px auto;
-  background-repeat: no-repeat;
-  background-position: top;
-  position: relative;
-  height: 820px;
+  height: 100vh;
 
   // common css setting
   @mixin cloud(
@@ -96,7 +91,7 @@
     background: url(http://katofarm-f.jp/svg/bg-nav-katofarm.svg) no-repeat 0 0;
     background-size: 100% auto;
     left: 4%;
-    top: 30%;
+    top: 4%;
     position: absolute;
 
     p {
@@ -121,7 +116,7 @@
       0 0;
     background-size: 100% auto;
     left: 22%;
-    top: 12%;
+    top: 10%;
     position: absolute;
     text-align: center;
     cursor: pointer;
@@ -149,7 +144,7 @@
     width: 193px;
     height: 113px;
     left: 40%;
-    top: 32%;
+    top: 2%;
     color: #3c3530;
     font-size: 12px;
     font-weight: bold;
@@ -180,7 +175,7 @@
     width: 193px;
     height: 113px;
     left: 65%;
-    top: 41%;
+    top: 10%;
     color: #3c3530;
     font-size: 12px;
     font-weight: bold;
@@ -214,7 +209,7 @@
       display: inline-block;
       position: relative;
       top: 85px;
-      left: 83%;
+      left: 70%;
       transition: top 0.1s ease;
 
       @keyframes spin {
