--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,13 +1,203 @@
-.home_header {
-  background-image: url(http://katofarm-f.jp/images/assets/bg-index-mainvisual@2x.png);
-  background-size: 2000px auto;
-  background-repeat: no-repeat;
-  background-position: top;
-  position: relative;
-  height: 820px;
-  background-size: 2000px auto;
-  background-repeat: no-repeat;
-  background-position: top;
-  position: relative;
-  height: 820px;
+// .slider_wrap {
+//   position: absolute;
+//   left: 25%;
+//   top: 50%;
+//   right: 0;
+//   bottom: 0;
+//   left: 0;
+//   margin: auto;
+// }
+
+* {
+  box-sizing: border-box;
 }
+
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+.click_to {
+  text-decoration: none;
+  padding: 10px;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  margin-top: 15px;
+  border-radius: 15px;
+  display: inline-block;
+  text-align: center;
+}
+
+.clearfix:after {
+  clear: both;
+}
+//classname for title
+.title_begin {
+  width: 100%;
+  text-align: center;
+  padding: 25px;
+
+  .title_begin_1 {
+    font-size: 16px;
+    padding-top: 20px 15px 15px;
+    color: #96b74b;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0.06em;
+    text-align: center;
+  }
+
+  .title_begin_2 {
+    color: #3c3530;
+    font-size: 34px;
+    font-weight: bold;
+    margin-top: -1px;
+    letter-spacing: 0.06em;
+    line-height: 1.4;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 15px;
+  }
+}
+
+
+.home {
+  .intro_about_us {
+    max-width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
+    clear: both;
+    width: 100%;
+
+    .about_us_img {
+      width: 50%;
+      float: left;
+      position: relative;
+
+      &:before {
+        display: block;
+        content: "";
+        background: url(http://katofarm-f.jp/svg/cover-index-message.svg) no-repeat 0 0;
+        background-size: 100% auto;
+        z-index: 2;
+        display: block;
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      &:after {
+        display: block;
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      img {
+        width: 100%;
+
+      }
+    }
+
+    .about_us_history {
+      width: 50%;
+      float: right;
+      padding: 25px;
+      font-size: 20px;
+      margin-right: auto;
+      margin-left: auto;
+      min-height: 500px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      letter-spacing: 3px;
+      line-height: 28px;
+    }
+  }
+
+  .intro_how {
+    .title_begin_2{
+      font-size: 25px !important;
+    }    
+    .intro_how_content{
+      max-width: 1280px;
+      margin-left: auto;
+      margin-right: auto;
+      .intro_how_title{
+          margin: 15px 15px;
+          color: gray;        
+      }
+    }
+    padding: 95px 0 120px;
+    text-align: center;
+    position: relative;
+    background: #e5efef url(http://katofarm-f.jp/svg/bg-index-point-bottom.svg) repeat-x center bottom;
+    &:before {
+      display: block;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #fff url(http://katofarm-f.jp/svg/bg-index-message-bottom.svg) repeat-x center bottom;
+      height: 60px;
+    }
+  }
+  .announce{
+      position: fixed;
+      bottom: 0;
+      right: 0;
+  }
+  .intro_notification{
+    padding: 0px 0 137px;
+    background: #e4e1d9 url(http://katofarm-f.jp/svg/bg-index-news-bottom.svg) repeat-x 50% 100%;
+   .intro_notification_content{
+       max-width: 1000px;
+       text-align: left;
+       margin-left: auto;
+       margin-right: auto;
+       font-size: 18px;
+       .notification_list{
+         padding: 7px 22px;
+             margin-bottom: 16px;
+             border-bottom: 1px dotted #969696;
+         .action_time{
+           text-decoration: none;
+            font-style: normal;
+            margin-right: 10px;
+            font-family: "Montserrat", "-apple-system", "Helvetica Neue", "Yu Gothic", YuGothic, Verdana, Meiryo, "M+ 1p", sans-serif;
+         }
+         .username{
+           font-weight: 800;
+           margin-right: 10px;
+         }
+       }
+   }
+  }
+  .intro_googlemap{
+    background-color: #bbb39f;
+    width: 100%;
+    max-height: 600px;
+    display: inline-block;
+    padding: 40px 0;
+    
+  }
+}
+
+.Googlemap{
+  width: 900px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+
+}
+ 
