--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -1,5 +1,6 @@
 *{
   box-sizing: border-box !important;
+  font-family: Verdana,Arial,\\5FAE\8EDF\6B63\9ED1\9AD4,Microsoft JhengHei,\\5FAE\8EDF\96C5\9ED1\9AD4,Microsoft YaHei;
 }
 html,
 body,
