--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -183,12 +183,12 @@
    }
   }
   .intro_googlemap{
-    background-color: #bbb39f;
+    padding: 20px 0;
+    text-align: center;
     width: 100%;
     max-height: 600px;
     display: inline-block;
     padding: 40px 0;
-    
   }
 }
 
