--- a/src/components/layout/header.scss
+++ b/src/components/layout/header.scss
@@ -2,30 +2,6 @@
   // outline: 1px solid red;
 }
 
-.navigation_bar {
-  &.navigation_innerpage_bar {
-    background-image: url(http://katofarm-f.jp/images/assets/bg-header-sky.png) !important;
-    background-repeat: repeat-x;
-    background-position: 0 0;
-    height: 248px;
-    &:after {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 40px;
-      background: url("http://katofarm-f.jp/svg/bg-index-rice.svg");
-      background-repeat: repeat-x;
-      left: 0;
-      bottom: 0;
-    }
-  }
-  background-image: url(http://katofarm-f.jp/images/assets/bg-index-mainvisual.png);
-  background-size: 2000px auto;
-  background-repeat: no-repeat;
-  background-position: top;
-  position: relative;
-  height: 100vh;
-
   // common css setting
   @mixin cloud(
     $width,
@@ -78,7 +54,11 @@
       background-position: 0 -770px;
     }
   }
-
+  .aa {
+    img {
+      transform: scale(1.2, 1.2);
+    }
+  }
   //grass
   .cloud1 {
     color: #3c3530;
@@ -196,95 +176,22 @@
     }
   }
 
-  .ul_wrap {
+.InsideHeader {
+    background-image: url(https://haranoujyo.com/assets/img/news_archive/ttl_bg.jpg);
+    background-repeat: repeat-x;
+    background-position: 0 0;
+    height: 248px;
+    background-size: 2000px auto;
+    background-position: top;
     position: relative;
-    width: 100%;
-    //sun
-    .sun {
-      border-radius: 153px 156px 183px 171px;
-      background-color: rgb(231, 125, 88);
-      height: 100px;
-      width: 100px;
-      border-radius: 50%;
-      display: inline-block;
-      position: relative;
-      top: 85px;
-      left: 70%;
-      transition: top 0.1s ease;
-
-      @keyframes spin {
-        from {
-          transform: rotate(0deg);
-        }
-
-        to {
-          transform: rotate(360deg);
-        }
-      }
-
-      .sunbeams {
-        width: 150px;
-        height: 150px;
-        position: absolute;
-        top: -25px;
-        left: -25px;
-        animation: spin 28s linear 0s infinite;
-
-        .beam {
-          width: 5px;
-          height: 34px;
-          background-color: rgb(231, 125, 88);
-          position: absolute;
-        }
-
-        .beam1 {
-          transform: rotate(0deg);
-          top: -24px;
-          left: 83px;
-        }
-
-        .beam2 {
-          transform: rotate(45deg);
-          top: 19px;
-          left: 152px;
-        }
-
-        .beam3 {
-          transform: rotate(90deg);
-          top: 70px;
-          left: 159px;
-        }
-
-        .beam4 {
-          transform: rotate(135deg);
-          top: 129px;
-          left: 150px;
-        }
-
-        .beam5 {
-          transform: rotate(180deg);
-          top: 149px;
-          left: 80px;
-        }
-
-        .beam6 {
-          transform: rotate(225deg);
-          top: 131px;
-          left: 2px;
-        }
-
-        .beam7 {
-          transform: rotate(270deg);
-          top: 72px;
-          left: -17px;
-        }
-
-        .beam8 {
-          transform: rotate(315deg);
-          top: -4px;
-          left: 3px;
-        }
-      }
+    &:after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 40px;
+      background: url("http://katofarm-f.jp/svg/bg-index-rice.svg");
+      background-repeat: repeat-x;
+      left: 0;
+      bottom: 0;
     }
-  }
 }
