--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,38 +1,33 @@
-// .slider_wrap {
-//   position: absolute;
-//   left: 25%;
-//   top: 50%;
-//   right: 0;
-//   bottom: 0;
-//   left: 0;
-//   margin: auto;
-// }
-
+.body_body_color {
+  background-color: #f5f5eb;
+}
 * {
   box-sizing: border-box;
 }
-
-.clearfix:before,
-.clearfix:after {
-  content: "";
-  display: table;
+.no_margin {
+  margin: 0px !important;
 }
-.click_to {
-  text-decoration: none;
-  padding: 10px;
-  width: 400px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #fff;
-  margin-top: 15px;
-  border-radius: 15px;
-  display: inline-block;
+.fixed_size {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  max-width: 1200px;
+}
+
+.see_more {
+  width: 100%;
   text-align: center;
+  .click_to {
+    text-decoration: none;
+    padding: 10px;
+    width: 400px;
+    margin-top: 15px;
+    border-radius: 5px;
+    display: inline-block;
+    border: 1px solid black;
+    padding: 16px;
+  }
 }
 
-.clearfix:after {
-  clear: both;
-}
 //classname for title
 .title_begin {
   width: 100%;
@@ -62,7 +57,6 @@
   }
 }
 
-
 .home {
   .intro_about_us {
     max-width: 1200px;
@@ -75,35 +69,9 @@
       width: 50%;
       float: left;
       position: relative;
-
-      &:before {
-        display: block;
-        content: "";
-        background: url(http://katofarm-f.jp/svg/cover-index-message.svg) no-repeat 0 0;
-        background-size: 100% auto;
-        z-index: 2;
-        display: block;
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-
-      &:after {
-        display: block;
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-
       img {
+        border-radius: 50%;
         width: 100%;
-
       }
     }
 
@@ -124,22 +92,23 @@
   }
 
   .intro_how {
-    .title_begin_2{
+    .title_begin_2 {
       font-size: 25px !important;
-    }    
-    .intro_how_content{
+    }
+    .intro_how_content {
       max-width: 1280px;
       margin-left: auto;
       margin-right: auto;
-      .intro_how_title{
-          margin: 15px 15px;
-          color: gray;        
+      .intro_how_title {
+        margin: 15px 15px;
+        color: gray;
       }
     }
     padding: 95px 0 120px;
     text-align: center;
     position: relative;
-    background: #e5efef url(http://katofarm-f.jp/svg/bg-index-point-bottom.svg) repeat-x center bottom;
+    background: #e5efef url(http://katofarm-f.jp/svg/bg-index-point-bottom.svg)
+      repeat-x center bottom;
     &:before {
       display: block;
       content: "";
@@ -147,57 +116,98 @@
       top: 0;
       left: 0;
       width: 100%;
-      background: #fff url(http://katofarm-f.jp/svg/bg-index-message-bottom.svg) repeat-x center bottom;
+      background: #fff url(http://katofarm-f.jp/svg/bg-index-message-bottom.svg)
+        repeat-x center bottom;
       height: 60px;
     }
   }
-  .announce{
-      position: fixed;
-      bottom: 0;
-      right: 0;
+  .announce {
+    position: fixed;
+    bottom: 0;
+    right: 0;
   }
-  .intro_notification{
+  .intro_notification {
     padding: 0px 0 137px;
-    background: #e4e1d9 url(http://katofarm-f.jp/svg/bg-index-news-bottom.svg) repeat-x 50% 100%;
-   .intro_notification_content{
-       max-width: 1000px;
-       text-align: left;
-       margin-left: auto;
-       margin-right: auto;
-       font-size: 18px;
-       .notification_list{
-         padding: 7px 22px;
-             margin-bottom: 16px;
-             border-bottom: 1px dotted #969696;
-         .action_time{
-           text-decoration: none;
-            font-style: normal;
-            margin-right: 10px;
-            font-family: "Montserrat", "-apple-system", "Helvetica Neue", "Yu Gothic", YuGothic, Verdana, Meiryo, "M+ 1p", sans-serif;
-         }
-         .username{
-           font-weight: 800;
-           margin-right: 10px;
-         }
-       }
-   }
+    background: #e4e1d9 url(http://katofarm-f.jp/svg/bg-index-news-bottom.svg)
+      repeat-x 50% 100%;
+    .intro_notification_content {
+      max-width: 1000px;
+      text-align: left;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 18px;
+      .notification_list {
+        padding: 7px 22px;
+        margin-bottom: 16px;
+        border-bottom: 1px dotted #969696;
+        .action_time {
+          text-decoration: none;
+          font-style: normal;
+          margin-right: 10px;
+        }
+        .username {
+          font-weight: 800;
+          margin-right: 10px;
+        }
+      }
+    }
   }
-  .intro_googlemap{
+  .intro_googlemap {
     padding: 20px 0;
     text-align: center;
     width: 100%;
     max-height: 600px;
     display: inline-block;
     padding: 40px 0;
+    height: 70vh;
+    .googlemap_wrap {
+      position: relative;
+      .google_map_plant {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 500px;
+      }
+      .Googlemap {
+        width: 70%;
+        height: 50vh;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        top: 50px;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+      }
+    }
   }
 }
 
-.Googlemap{
-  width: 900px;
-  height: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-
+.card {
+  background-color: inherit;
 }
- 
+.intro_product {
+  width: 100%;
+  .product_box {
+    .product {
+      display: inline-block;
+      padding: 0 3px 0 3px;
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+
+.family_intro{
+  .family_img{
+    width: 50%;
+  }
+  .family_content{
+    width: 50%;
+  }
+}
+
