--- a/src/components/layout/header.scss
+++ b/src/components/layout/header.scss
@@ -1,197 +1,214 @@
-* {
-  // outline: 1px solid red;
+// common css setting
+@mixin cloud(
+  $width,
+  $height,
+  $afterWidth,
+  $afterHeight,
+  $beforeWidth,
+  $beforeHeight
+) {
+  width: $width;
+  height: $height;
+  background-color: white;
+  position: absolute;
+  border-radius: 100px;
+  &:after {
+    width: $afterWidth;
+    height: $afterHeight;
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    background-color: white;
+  }
+  &:before {
+    content: "";
+    position: absolute;
+    background-color: white;
+    width: $beforeWidth;
+    height: $beforeHeight;
+    border-radius: 100px;
+  }
 }
 
-  // common css setting
-  @mixin cloud(
-    $width,
-    $height,
-    $afterWidth,
-    $afterHeight,
-    $beforeWidth,
-    $beforeHeight
-  ) {
-    width: $width;
-    height: $height;
-    background-color: white;
-    position: absolute;
-    border-radius: 100px;
-    &:after {
-      width: $afterWidth;
-      height: $afterHeight;
-      content: "";
-      position: absolute;
-      border-radius: 50%;
-      background-color: white;
-    }
-    &:before {
-      content: "";
-      position: absolute;
-      background-color: white;
-      width: $beforeWidth;
-      height: $beforeHeight;
-      border-radius: 100px;
-    }
+// logo animation
+@keyframes nav-product {
+  0% {
+    background-position: 0 0;
   }
 
-  // logo animation
-  @keyframes nav-product {
-    0% {
-      background-position: 0 0;
-    }
+  100% {
+    background-position: 0 -450px;
+  }
+}
 
-    100% {
-      background-position: 0 -450px;
-    }
+@keyframes nav-about {
+  0% {
+    background-position: 0 0;
   }
 
-  @keyframes nav-about {
-    0% {
-      background-position: 0 0;
-    }
-
-    100% {
-      background-position: 0 -770px;
-    }
+  100% {
+    background-position: 0 -770px;
   }
-  .aa {
-    img {
-      transform: scale(1.2, 1.2);
-    }
-  }
-  //grass
-  .cloud1 {
-    color: #3c3530;
-    font-size: 12px;
-    font-weight: bold;
-    letter-spacing: 0.06em;
-    display: block;
-    width: 180px;
-    height: 124px;
-    background: url(http://katofarm-f.jp/svg/bg-nav-katofarm.svg) no-repeat 0 0;
-    background-size: 100% auto;
-    left: 4%;
-    top: 4%;
-    position: absolute;
+}
 
-    p {
-      text-align: center;
-    }
+//grass
+.cloud1 {
+  color: #3c3530;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 0.06em;
+  display: block;
+  width: 180px;
+  height: 124px;
+  background: url(http://katofarm-f.jp/svg/bg-nav-katofarm.svg) no-repeat 0 0;
+  background-size: 100% auto;
+  left: 4%;
+  top: 4%;
+  position: absolute;
 
-    img {
-      display: block;
-      margin: 0 auto;
-    }
-  }
-
-  //rice
-  .cloud2 {
-    color: #3c3530;
-    font-size: 12px;
-    font-weight: bold;
-    display: block;
-    width: 180px;
-    height: 124px;
-    background: url(http://katofarm-f.jp/svg/bg-nav-product-cloud.svg) no-repeat
-      0 0;
-    background-size: 100% auto;
-    left: 22%;
-    top: 10%;
-    position: absolute;
+  p {
     text-align: center;
-    cursor: pointer;
-
-    &:hover .grass_img {
-      animation: nav-product 1.3s steps(9) infinite;
-    }
-    .grass_img {
-      position: absolute;
-      top: 30px;
-      left: 60px;
-      width: 60px;
-      height: 50px;
-      background: url(http://katofarm-f.jp/sprite/nav-product-sprite@2x.png)
-        no-repeat 0 0;
-      background-size: 60px 500px;
-    }
   }
 
-  .cloud3 {
+  img {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+//rice
+.cloud2 {
+  color: #3c3530;
+  font-size: 12px;
+  font-weight: bold;
+  display: block;
+  width: 180px;
+  height: 124px;
+  background: url(http://katofarm-f.jp/svg/bg-nav-product-cloud.svg) no-repeat 0
+    0;
+  background-size: 100% auto;
+  left: 22%;
+  top: 10%;
+  position: absolute;
+  text-align: center;
+  cursor: pointer;
+
+  &:hover .grass_img {
+    animation: nav-product 1.3s steps(9) infinite;
+  }
+  .grass_img {
     position: absolute;
-    background: url(http://katofarm-f.jp/svg/bg-nav-product-cloud.svg) no-repeat
-      0 0;
-    background-size: 100% auto;
-    width: 193px;
-    height: 113px;
-    left: 40%;
-    top: 2%;
-    color: #3c3530;
-    font-size: 12px;
-    font-weight: bold;
-    cursor: pointer;
+    top: 30px;
+    left: 60px;
+    width: 60px;
+    height: 50px;
+    background: url(http://katofarm-f.jp/sprite/nav-product-sprite@2x.png)
+      no-repeat 0 0;
+    background-size: 60px 500px;
+  }
+}
 
-    &:hover .note_img {
-      animation: nav-product 1.3s steps(9) infinite;
-    }
+.cloud3 {
+  position: absolute;
+  background: url(http://katofarm-f.jp/svg/bg-nav-product-cloud.svg) no-repeat 0
+    0;
+  background-size: 100% auto;
+  width: 193px;
+  height: 113px;
+  left: 40%;
+  top: 2%;
+  color: #3c3530;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
 
-    .note_img {
-      position: absolute;
-      top: 30px;
-      left: 60px;
-      width: 60px;
-      height: 50px;
-      background: url(http://katofarm-f.jp/sprite/nav-letters-sprite@2x.png)
-        no-repeat 0 0;
-      background-size: 60px 500px;
-    }
+  &:hover .note_img {
+    animation: nav-product 1.3s steps(9) infinite;
   }
 
-  //grass
-  .cloud4 {
+  .note_img {
     position: absolute;
-    background: url(http://katofarm-f.jp/svg/bg-nav-about-cloud.svg) no-repeat 0
-      0;
-    background-size: 100% auto;
-    width: 193px;
-    height: 113px;
-    left: 65%;
-    top: 10%;
-    color: #3c3530;
-    font-size: 12px;
-    font-weight: bold;
-    cursor: pointer;
-    &:hover .grassimg {
-      animation: nav-about 1s steps(14) infinite;
-    }
-
-    .grassimg {
-      top: 40px;
-      left: 70px;
-      width: 55px;
-      height: 55px;
-      background: url(http://katofarm-f.jp/sprite/nav-about-sprite@2x.png)
-        no-repeat 0 0;
-      background-size: 53px 825px;
-      position: absolute;
-    }
+    top: 30px;
+    left: 60px;
+    width: 60px;
+    height: 50px;
+    background: url(http://katofarm-f.jp/sprite/nav-letters-sprite@2x.png)
+      no-repeat 0 0;
+    background-size: 60px 500px;
   }
+}
+
+//grass
+.cloud4 {
+  position: absolute;
+  background: url(http://katofarm-f.jp/svg/bg-nav-about-cloud.svg) no-repeat 0 0;
+  background-size: 100% auto;
+  width: 193px;
+  height: 113px;
+  left: 65%;
+  top: 10%;
+  color: #3c3530;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  &:hover .grassimg {
+    animation: nav-about 1s steps(14) infinite;
+  }
+
+  .grassimg {
+    top: 40px;
+    left: 70px;
+    width: 55px;
+    height: 55px;
+    background: url(http://katofarm-f.jp/sprite/nav-about-sprite@2x.png)
+      no-repeat 0 0;
+    background-size: 53px 825px;
+    position: absolute;
+  }
+}
 
 .InsideHeader {
-    background-image: url(https://haranoujyo.com/assets/img/news_archive/ttl_bg.jpg);
-    background-repeat: repeat-x;
-    background-position: 0 0;
-    height: 248px;
-    background-size: 2000px auto;
-    background-position: top;
-    position: relative;
-    &:after {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 40px;
-      background: url("http://katofarm-f.jp/svg/bg-index-rice.svg");
-      background-repeat: repeat-x;
-      left: 0;
-      bottom: 0;
-    }
+  background-image: url(https://haranoujyo.com/assets/img/news_archive/ttl_bg.jpg);
+  background-repeat: repeat-x;
+  background-position: 0 0;
+  height: 248px;
+  background-size: 2000px auto;
+  background-position: top;
+  position: relative;
+}
+
+.IndexHeader {
+  img {
+    height: 95vh;
+  }
+  .aa {
+    margin: 0 !important;
+  }
+}
+
+.nav_link {
+  height: 100vh;
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+  color: black;
+  span {
+    color: black;
+    vertical-align: center;
+    height: calc(100vh - 95vh);
+    width: 200px;
+    display: inline-block;
+    padding-top: 15px;
+  }
+  &.inside_header {
+    height: initial;
+  }
+}
+
+.sign_out {
+  cursor: pointer;
+}
+.slider-list{
+  margin: 0 !important;
 }
