--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -1,5 +1,5 @@
 *{
-  outline: 1px solid red;
+  // outline: 1px solid red;
   box-sizing: border-box !important;
 }
 body{
@@ -17,7 +17,10 @@ ul {
   list-style: none;
 }
 
-
+a{
+text-decoration: none;
+  
+}
 blockquote:before,
 blockquote:after,
 q:before,
