--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,58 +1,91 @@
+.reviews_bgc {
+  background: url(http://michikiri.com/img/common/bg_pattern_01.png);
+  padding: 28px 20px 60px;
+}
+
 .reviews {
   width: 100%;
   display: flex;
+  margin-top: 50px;
+
   .review_list {
     .review_box {
+      background-color: rgba(255, 255, 232, 0.4);
       display: flex;
       padding: 15px;
-      .post_time {
-        .date {
-          width: 60px;
-          height: 60px;
-          background: #222;
-          color: #fff;
-          padding: 0px;
-          line-height: 1;
-          padding: 15px 4px;
-          text-align: center;
-          font-weight: bold;
-        }
-      }
-      .post {
-        padding-left: 15px;
-        .review_title {
-          font-weight: bold;
-        }
-        .review_content {
-          font-size: 14px;
-        }
-        .postPerson {
-          font-style: italic;
-        }
+      margin-top: 15px;
+      background: rgba(0, 0, 0, 0.1);
+
+    .post_time {
+      .date {
+        width: 60px;
+        height: 60px;
+        background: #222;
+        color: #fff;
+        padding: 0px;
+        line-height: 1;
+        padding: 15px 4px;
+        text-align: center;
+        font-weight: bold;
       }
     }
-  }
-  .notification {
+
+    .post {
+      padding-left: 15px;
+
+      .review_title {
+        font-weight: bold;
+      }
+
+      .review_content {
+        font-size: 14px;
+      }
+
+      .postPerson {
+        font-style: italic;
+      }
+    }
   }
 }
 
 .notification {
+  padding-left: 15px;
+}
+}
+
+.notification {
+  .title_img {
+    width: 210px;
+    padding: 15px;
+
+    img {
+      width: 100%;
+    }
+  }
+
   .notification_box {
     width: 100%;
+    padding-right: 15px;
+
     .action {
-        margin-bottom: 20px;
+      margin-bottom: 20px;
+      border-bottom: 1px solid antiquewhite;
+      padding-bottom: 5px;
+
       .username {
-          color: lightcoral;
-          display: inline-block;
-          margin-right: 15px;
+        color: lightgray;
+        display: inline-block;
+        margin-right: 15px;
       }
+
       .action_behavior {
-          font-weight: bold;     
-               
+        font-weight: bold;
+
       }
+
       .action_time {
-          font-size: 14px;
-          font-style: italic;
+        font-size: 14px;
+        font-style: italic;
       }
     }
   }
