--- a/src/components/auth/sign.scss
+++ b/src/components/auth/sign.scss
@@ -50,8 +50,8 @@
 
 .signup {
   display: flex;
-  align-items:center;
-justify-content:center;
+  align-items: center;
+  justify-content: center;
   .signup_bgc {
     width: 80%;
     position: relative;
@@ -62,10 +62,18 @@ justify-content:center;
       position: absolute;
       top: 50%;
       left: 50%;
-      .form{
+      .form {
         width: 500px;
       }
-
     }
+  }
+}
+.googleBtn {
+  margin-top: 15px;
+  cursor: pointer;
+  width: 250px;
+  height: 50px;
+  img {
+    width: 100%;
   }
 }
