--- a/src/components/layout/header.scss
+++ b/src/components/layout/header.scss
@@ -1,17 +1,16 @@
 // common css setting
-@mixin cloud(
-  $width,
+@mixin cloud($width,
   $height,
   $afterWidth,
   $afterHeight,
   $beforeWidth,
-  $beforeHeight
-) {
+  $beforeHeight) {
   width: $width;
   height: $height;
   background-color: white;
   position: absolute;
   border-radius: 100px;
+
   &:after {
     width: $afterWidth;
     height: $afterHeight;
@@ -20,6 +19,7 @@
     border-radius: 50%;
     background-color: white;
   }
+
   &:before {
     content: "";
     position: absolute;
@@ -84,8 +84,7 @@
   display: block;
   width: 180px;
   height: 124px;
-  background: url(http://katofarm-f.jp/svg/bg-nav-product-cloud.svg) no-repeat 0
-    0;
+  background: url(http://katofarm-f.jp/svg/bg-nav-product-cloud.svg) no-repeat 0 0;
   background-size: 100% auto;
   left: 22%;
   top: 10%;
@@ -96,22 +95,21 @@
   &:hover .grass_img {
     animation: nav-product 1.3s steps(9) infinite;
   }
+
   .grass_img {
     position: absolute;
     top: 30px;
     left: 60px;
     width: 60px;
     height: 50px;
-    background: url(http://katofarm-f.jp/sprite/nav-product-sprite@2x.png)
-      no-repeat 0 0;
+    background: url(http://katofarm-f.jp/sprite/nav-product-sprite@2x.png) no-repeat 0 0;
     background-size: 60px 500px;
   }
 }
 
 .cloud3 {
   position: absolute;
-  background: url(http://katofarm-f.jp/svg/bg-nav-product-cloud.svg) no-repeat 0
-    0;
+  background: url(http://katofarm-f.jp/svg/bg-nav-product-cloud.svg) no-repeat 0 0;
   background-size: 100% auto;
   width: 193px;
   height: 113px;
@@ -132,8 +130,7 @@
     left: 60px;
     width: 60px;
     height: 50px;
-    background: url(http://katofarm-f.jp/sprite/nav-letters-sprite@2x.png)
-      no-repeat 0 0;
+    background: url(http://katofarm-f.jp/sprite/nav-letters-sprite@2x.png) no-repeat 0 0;
     background-size: 60px 500px;
   }
 }
@@ -151,6 +148,7 @@
   font-size: 12px;
   font-weight: bold;
   cursor: pointer;
+
   &:hover .grassimg {
     animation: nav-about 1s steps(14) infinite;
   }
@@ -160,8 +158,7 @@
     left: 70px;
     width: 55px;
     height: 55px;
-    background: url(http://katofarm-f.jp/sprite/nav-about-sprite@2x.png)
-      no-repeat 0 0;
+    background: url(http://katofarm-f.jp/sprite/nav-about-sprite@2x.png) no-repeat 0 0;
     background-size: 53px 825px;
     position: absolute;
   }
@@ -169,27 +166,29 @@
 
 .InsideHeader {
   background-image: url(https://haranoujyo.com/assets/img/news_archive/ttl_bg.jpg);
-    background-position: 0 0;
-    height: 352px;
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    .inside_title{
-      color: white;
-      padding:30px 60px;
-      background-color: rgba(255, 256, 232, 0.4)
-    }
+  background-position: 0 0;
+  height: 352px;
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .inside_title {
+    color: white;
+    padding: 30px 60px;
+    background-color: rgba(255, 256, 232, 0.4)
+  }
 }
 
 .IndexHeader {
   img {
     height: 95vh;
   }
+
   .aa {
     margin: 0 !important;
   }
@@ -202,6 +201,7 @@
   text-align: center;
   font-weight: bold;
   color: black;
+
   span {
     color: black;
     vertical-align: center;
@@ -210,6 +210,7 @@
     display: inline-block;
     padding-top: 15px;
   }
+
   &.inside_header {
     height: initial;
   }
@@ -218,6 +219,49 @@
 .sign_out {
   cursor: pointer;
 }
-.slider-list{
+
+.slider-list {
   margin: 0 !important;
+}
+
+.index_carousel_bg {
+  z-index: 2;
+  font-size: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1;
+
+  &:after {
+    display: block;
+    position: absolute;
+    content: '';
+    width: 192.90323%;
+    padding-top: 108.603%;
+    margin-left: -25px;
+    background-image: url(https://haranoujyo.com/assets/img/top/fv_picture.svg);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+
+  .circle {
+    width: 425px;
+    height: 280px;
+    background-color: white;
+    opacity: .8;
+    border-radius: 44%;
+  }
+}
+
+
+@media screen and (min-width: 769px) {
+  .p-top-fv__p {
+    width: 500px;
+    height: 270px;
+  }
 }
