--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -39,3 +39,14 @@ table {
 	content:"";
 	display:table;
 }
+.color_01 {
+  color: #FF9641;
+}
+
+.color_02 {
+  color: #81C4FF;
+}
+
+.color_03 {
+  color: #A87E4B;
+}
