--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -294,4 +294,11 @@
   }
 }
 
-;
+.index_info{
+  position: absolute;
+  left: 44%;
+  top: 40%;
+  z-index: 3;
+  font-family: 'Josefin Sans';
+}
+
