--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -4,6 +4,7 @@
 
 * {
   box-sizing: border-box;
+  // outline: 1px solid red;
 }
 
 .no_margin {
@@ -21,6 +22,11 @@
   text-align: center;
 
   .click_to {
+    &:hover {
+      background-color: #D7C0AE;
+      color:white;
+    }
+    transition: .5s;
     text-decoration: none;
     padding: 10px;
     width: 220px;
@@ -39,10 +45,9 @@
   padding: 25px;
 
   .title_begin_1 {
-    font-size: 16px;
+    font-size: 20px;
     padding-top: 20px 15px 15px;
     color: #96b74b;
-    font-size: 16px;
     font-weight: bold;
     letter-spacing: 0.06em;
     text-align: center;
@@ -208,10 +213,17 @@
   border: none;
   background-color: inherit;
 
+  p {
+    height: 100px;
+    padding: 5px;
+    letter-spacing: 2.5px;
+  }
+
   h3 {
     text-align: center;
     line-height: 1.36364;
     color: #ff9641;
+    font-size: 20px;
   }
 }
 
@@ -220,10 +232,16 @@
 
   .product_box {
     .product {
+      &:hover {
+        opacity: 1;
+        backface-visibility: hidden;
+      }
       display: inline-block;
       padding: 0;
+      height: 300px;
 
       .product_img {
+        height: 100%;
         width: 100%;
       }
 
@@ -268,6 +286,16 @@
   }
 }
 
+.gm-style .gm-style-iw-c {
+  top: -40px;
+}
+
+.gm-style .gm-style-iw-t {
+  &:after {
+    top: -40px;
+  }
+}
+
 // media query
 @media (max-width: 768px) {
   .family_intro {
@@ -294,11 +322,10 @@
   }
 }
 
-.index_info{
+.index_info {
   position: absolute;
-  left: 44%;
+  left: 41%;
   top: 40%;
   z-index: 3;
   font-family: 'Josefin Sans';
 }
-
