--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -55,7 +55,7 @@
         }
 
         &:before {
-          content: "";
+          // content: "";
           display: block;
           width: 100%;
           height: 100%;
@@ -70,7 +70,7 @@
         }
 
         &:after {
-          content: "";
+          // content: "";
           display: block;
           width: 100%;
           height: 100%;
