add url in productdetail page

--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -2,8 +2,8 @@
 //   outline: 1px solid red;
   box-sizing: border-box !important;
 }
-body{
-  font-family: Verdana,Arial,\\5FAE\8EDF\6B63\9ED1\9AD4,Microsoft JhengHei,\\5FAE\8EDF\96C5\9ED1\9AD4,Microsoft YaHei !important;
+body, h2, p{
+  font-family: Verdana,Arial,\\5fae\8edf\6b63\9ed1\9ad4,specialTextFont,\\5fae\8edf\96c5\9ed1\9ad4,Microsoft YaHei!important;
 }
 
 
