--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -142,3 +142,21 @@
     }
   }
 }
+
+
+
+.ProductDetails{
+  text-align: center;
+  .card_wrap{
+    padding: 20px;
+    .card-img-img{
+      width: 300px;
+      height: 400px;
+      margin: auto;
+      img{
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
