--- a/src/components/layout/footer.scss
+++ b/src/components/layout/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background: url(https://www.ecag.co.jp/images/foot_bg01.jpg) 50% 0 no-repeat;
   width: 100%;
-  min-width: 980px;
+  // min-width:100%;
   padding-top: 123px;
 }
