--- a/src/components/layout/header.scss
+++ b/src/components/layout/header.scss
@@ -97,13 +97,14 @@
 }
 
 .index_carousel_bg {
-  z-index: 2;
-  font-size: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  line-height: 1;
+     z-index: 2;
+     font-size: 0;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     -webkit-transform: translate(-50%, -50%);
+     transform: translate(-50%, -50%);
+     line-height: 1;
 
   &:after {
     display: block;
@@ -117,7 +118,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;;
     background-position: center;
   }
 
