--- a/src/components/products/product.scss
+++ b/src/components/products/product.scss
@@ -155,8 +155,8 @@
     margin: auto;
 
     .card-img-img {
-      width: 100%;
-      height: 400px;
+      width: 90%;
+      height: auto;
       margin: auto;
 
       img {
